Fix padding of right aligned menus in a table's menubar

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
@@ -13,6 +13,7 @@
 @table-row-padding-y: 7px;
 /* Adjustment to shift the checkbox a little upwards to align it with the text (resp. first line of the text in case of multiline cells) */
 @checkable-cell-padding-adjustment: 2px;
+@table-menubar-padding: 8px;
 
 .table {
   height: 100%;
@@ -33,11 +34,9 @@
     border-top-color: transparent;
   }
 
-  & > .menubar {
-    &:not(.main-menubar) {
-      padding-left: @table-cell-padding-left;
-      padding-right: @table-cell-padding-right;
-    }
+  & > .menubar:not(.main-menubar) {
+    padding-left: @table-menubar-padding;
+    padding-right: @table-menubar-padding;
   }
 
   &.checkable {
